--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: serif;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 header{
-    background: rgb(1,108,158);
-    height: 6vh;
+    background: rgb(0, 0, 0);
+    height: 5vh;
 }
 
 a :hover{
@@ -19,6 +19,14 @@ a :hover{
     text-transform: uppercase;
     font-size: 32px;
     padding-left: 2vw;
+}
+
+body{
+    background-image: url("bg.png");
+}
+
+main{
+    height:70vh;
 }
 
 .menu1 :hover{
@@ -46,7 +54,7 @@ a :hover{
 }
 
 .menu1{
-    background: rgb(1,108,158,1);
+    background: rgb(0, 0, 0);
     text-decoration: none;
     text-align: center;
     font-size: 24px;
@@ -62,7 +70,7 @@ a :hover{
 }
 
 .menu2{
-    background:  rgb(1,108,158,0.8);
+    background:  rgba(0, 0, 0, 0.8);
     text-decoration: none;
     text-align: center;
     font-size: 24px;
@@ -77,7 +85,7 @@ a :hover{
 }
 
 .menu3{
-    background: rgb(1,108,158,0.6);
+    background: rgba(0, 0, 0, 0.6);
     text-decoration: none;
     text-align: center;
     font-size: 24px;
@@ -92,7 +100,7 @@ a :hover{
 }
 
 .menu4{
-    background:  rgb(1,108,158,0.8);
+    background:  rgba(0, 0, 0, 0.8);
     text-decoration: none;
     text-align: center;
     font-size: 24px;
@@ -107,7 +115,7 @@ a :hover{
 }
 
 .menu5{
-    background: rgb(1,108,158,1);
+    background: rgb(0, 0, 0);
     text-decoration: none;
     text-align: center;
     font-size: 24px;
@@ -122,12 +130,14 @@ a :hover{
 }
 
 .imagem_de_espera{
-    background: rgb(1,108,158);
-    margin-top: 45vh;
+    background: none;
+    margin-top: 50vh;
     margin-right: 96vw;
-    border-radius: 50px;
-    padding-top: 2px;
-    padding-left: 4px;
-    padding-right: 2px;
-    padding-bottom: 2px;
+    margin-left: 2vw;
+}
+
+footer{
+    background: rgb(0, 0, 0);
+    margin: 0;
+    height: 25vh;
 }
