--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 header{
     background: rgb(0, 0, 0);
-    height: 15vh;
+    height: 25vh;
 }
 
 a :hover{
@@ -19,6 +19,7 @@ a :hover{
     text-transform: uppercase;
     font-size: 32px;
     padding-left: 2vw;
+    padsing-right: 80vw;
 }
 
 body{
